# alpaca-racing-formula-1

./: .gitignore  .gitmodules  README.md  pyproject.toml  simple_cv_racer.py
mysim/: myconfig.py  simple_cv_racer.py
src/: config.py  myconfig.py  simple_cv_racer.py
