[tool.poetry]
name = "alpaca-racing-formula-1"
version = "0.1.0"
description = ""
authors = ["Alpaca Racing"]

[tool.poetry.dependencies]
python = "^3.7"
donkeycar = {git = "https://github.com/autorope/donkeycar", branch = "master" }
gym-donkeycar = {git = "https://github.com/tawnkramer/gym-donkeycar", branch = "master" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
