[tool.poetry]
name = "alpaca-racing-formula-1"
version = "0.1.0"
description = ""
authors = ["Alpaca Racing"]

[tool.poetry.dependencies]
python = "^3.7.1,<3.8"
donkeycar = {git = "https://github.com/autorope/donkeycar", branch = "master", extras = ["pc"]}
gym-donkeycar = {git = "https://github.com/tawnkramer/gym-donkeycar", branch = "master", extras = ["gym-donkeycar"] }
pandas = "^1.3.4"
simple-pid = "^1.0.1"
scipy = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
